; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/shlwapi/extr_string.c_test_StrChrW.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/shlwapi/extr_string.c_test_StrChrW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [30 x i8] c"found char %d in wrong place\0A\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"found char not in the string\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_StrChrW to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_StrChrW() #0 {
  %1 = alloca [16385 x i8], align 16
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i32 32, i32* %2, align 4
  br label %5

5:                                                ; preds = %14, %0
  %6 = load i32, i32* %2, align 4
  %7 = icmp slt i32 %6, 16384
  br i1 %7, label %8, label %17

8:                                                ; preds = %5
  %9 = load i32, i32* %2, align 4
  %10 = trunc i32 %9 to i8
  %11 = load i32, i32* %2, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds [16385 x i8], [16385 x i8]* %1, i64 0, i64 %12
  store i8 %10, i8* %13, align 1
  br label %14

14:                                               ; preds = %8
  %15 = load i32, i32* %2, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %2, align 4
  br label %5

17:                                               ; preds = %5
  %18 = getelementptr inbounds [16385 x i8], [16385 x i8]* %1, i64 0, i64 16384
  store i8 0, i8* %18, align 16
  store i32 32, i32* %2, align 4
  br label %19

19:                                               ; preds = %38, %17
  %20 = load i32, i32* %2, align 4
  %21 = icmp slt i32 %20, 16384
  br i1 %21, label %22, label %41

22:                                               ; preds = %19
  %23 = getelementptr inbounds [16385 x i8], [16385 x i8]* %1, i64 0, i64 0
  %24 = getelementptr inbounds i8, i8* %23, i64 32
  %25 = load i32, i32* %2, align 4
  %26 = call i8* @StrChrW(i8* %24, i32 %25)
  store i8* %26, i8** %3, align 8
  %27 = load i8*, i8** %3, align 8
  %28 = getelementptr inbounds [16385 x i8], [16385 x i8]* %1, i64 0, i64 0
  %29 = ptrtoint i8* %27 to i64
  %30 = ptrtoint i8* %28 to i64
  %31 = sub i64 %29, %30
  %32 = load i32, i32* %2, align 4
  %33 = sext i32 %32 to i64
  %34 = icmp eq i64 %31, %33
  %35 = zext i1 %34 to i32
  %36 = load i32, i32* %2, align 4
  %37 = call i32 (i32, i8*, ...) @ok(i32 %35, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %36)
  br label %38

38:                                               ; preds = %22
  %39 = load i32, i32* %2, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %2, align 4
  br label %19

41:                                               ; preds = %19
  store i32 32, i32* %2, align 4
  br label %42

42:                                               ; preds = %58, %41
  %43 = load i32, i32* %2, align 4
  %44 = icmp slt i32 %43, 16384
  br i1 %44, label %45, label %61

45:                                               ; preds = %42
  %46 = getelementptr inbounds [16385 x i8], [16385 x i8]* %1, i64 0, i64 0
  %47 = load i32, i32* %2, align 4
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds i8, i8* %46, i64 %48
  %50 = getelementptr inbounds i8, i8* %49, i64 1
  %51 = load i32, i32* %2, align 4
  %52 = call i8* @StrChrW(i8* %50, i32 %51)
  store i8* %52, i8** %4, align 8
  %53 = load i8*, i8** %4, align 8
  %54 = icmp ne i8* %53, null
  %55 = xor i1 %54, true
  %56 = zext i1 %55 to i32
  %57 = call i32 (i32, i8*, ...) @ok(i32 %56, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  br label %58

58:                                               ; preds = %45
  %59 = load i32, i32* %2, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %2, align 4
  br label %42

61:                                               ; preds = %42
  ret void
}

declare dso_local i8* @StrChrW(i8*, i32) #1

declare dso_local i32 @ok(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
